--- a/waterATM/Transaction/templates/list_transaction.html
+++ b/waterATM/Transaction/templates/list_transaction.html
@@ -7,7 +7,37 @@
 </head>
 {% block content %}
 <body>
-<h1>list transaction</h1>
+<h1>list Transaction</h1>
+
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">sr no</th>
+      <th scope="col">Date & Time</th>
+        <th scope="col">CONSUMED_QTY</th>
+      <th scope="col">BALANCE_QTY</th>
+        <th scope="col">MEMBERSHIP_ID</th>
+        <th scope="col">READER_ID</th>
+    </tr>
+  </thead>
+  <tbody>
+                {% for txn in transaction %}
+                <tr>
+                    <td>{{ txn.id }}</td>
+                    <td>{{ txn.Txn_DateTime }}</td>
+                    <td>{{ txn.CONSUMED_QTY }}</td>
+                    <td>{{ txn.BALANCE_QTY }}</td>
+                    <td>{{ txn.MEMBERSHIP_ID.number }}</td>
+                    <td>{{ txn.READER_ID.mac }}</td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="4" class="text-center">No result found.</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+</table>
+
 </body>
 {% endblock %}
 </html>
