--- a/waterATM/Consumer/templates/list_user.html
+++ b/waterATM/Consumer/templates/list_user.html
@@ -16,6 +16,7 @@
       <th scope="col">Name</th>
       <th scope="col">Gender</th>
       <th scope="col">Age</th>
+        <th scope="col">Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -25,6 +26,13 @@
                     <td>{{ user.name }}</td>
                     <td>{{ user.gender }}</td>
                     <td>{{ user.age }}</td>
+                   <td>
+
+                    <form method="post" action="{% url 'delete_consumer' user.id %}" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                    </form>
+                    </td>
                 </tr>
                 {% empty %}
                 <tr>
