--- a/waterATM/Transaction/templates/list_quota.html
+++ b/waterATM/Transaction/templates/list_quota.html
@@ -25,8 +25,14 @@
                     <td>{{ quota.id }}</td>
                     <td>{{ quota.Gender }}</td>
                     <td>{{ quota.DAILY_QUOTA }}</td>
-                    <td>{{ quota.ACTIVE_DATE }}</td>
-                    <td>{{ quota.Status }}</td>
+                    <td>{{ quota.ACTIVE_DATE | date:"d/m/Y"}}</td>
+                    <td>
+    {% if quota.Status == "1" %}
+        Active
+    {% else %}
+        Deactive
+    {% endif %}
+</td>
                 </tr>
                 {% empty %}
                 <tr>
