--- a/waterATM/Consumer/templates/base.html
+++ b/waterATM/Consumer/templates/base.html
@@ -125,7 +125,7 @@
                     </div>
                 </li>
 
-                  <li class="nav-item">
+                  <li class="nav-item" style="margin-top:150px;font-size:28px;">
                     <a class="nav-link text-light" href="{% url 'logout' %}">Logout</a>
                 </li>
 
@@ -163,7 +163,7 @@
                     </div>
                 </li>
 
-                  <li class="nav-item">
+                  <li class="nav-item" style="margin-top:150px;font-size:28px;">
                     <a class="nav-link text-light" href="{% url 'logout' %}">Logout</a>
                 </li>
                             <!-- Other consumer links -->
